--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -182,6 +182,8 @@
   - CaptainWintercoat
 #ss220-loadout-captain-begin
   - CaptainWhiteOuterClothing
+  - CaptainBlackOuterClothing
+  - CaptainBlackCoat
   - CaptainWhiteCoat
 #ss220-loadout-captain-end
   - CaptainWhiteWintercoat #ss220-loadout-fullwhitecap
