--- a/Resources/Prototypes/SS220/Catalog/centdrobeinventory.yml
+++ b/Resources/Prototypes/SS220/Catalog/centdrobeinventory.yml
@@ -11,6 +11,7 @@
     #Outerclothing
     ClothingOuterCoatCentcomJacket: 2
     ClothingOuterCoatOfficerFieldUniform: 2
+    ClothingOuterBlackCoatCaptain: 2
     ClothingOuterCoatCentcomFormalDress: 2
     ClothingOuterWinterCentcomm: 2
     #Eyes
