--- a/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/coats.yml
@@ -98,7 +98,17 @@
     sprite: SS220/Clothing/OuterClothing/Coats/captain_white.rsi
   - type: Clothing
     sprite: SS220/Clothing/OuterClothing/Coats/captain_white.rsi
-
+- type: entity
+  parent: ClothingUniformJumpskirtCapFormalDress
+  id: ClothingOuterBlackCoatCaptain
+  name: чёрное пальто капитана
+  description: Чёрное пальто? Такие выдаются лишь офицерам флота Nanotrasen.
+  suffix: За время в игре
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Coats/captain_blackcoat.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Coats/captain_blackcoat.rsi
 - type: entity
   parent: ClothingOuterStorageBase
   id: ClothingOuterCoatHoPFormalDress
