--- a/Resources/Prototypes/SS220/Loadouts/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/SS220/Loadouts/Jobs/Command/captain.yml
@@ -155,6 +155,14 @@
     outerClothing: ClothingOuterWhiteCoatCaptain
 
 - type: loadout
+  id: CaptainBlackCoat
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: CaptainSenior
+  equipment:
+    outerClothing: ClothingOuterBlackCoatCaptain
+
+- type: loadout
   id: CaptainWhiteWintercoat
   effects:
   - !type:GroupLoadoutEffect
