--- a/Resources/Prototypes/SS220/meme_alert_levels.yml
+++ b/Resources/Prototypes/SS220/meme_alert_levels.yml
@@ -3,7 +3,7 @@
   levelDetails:
     announcement: joke-alert-level-rzhamma-announcement
     sound:
-      path: /Audio/Misc/gamma.ogg
+      path: /Audio/SS220/Announcements/rzhamma.ogg
       params:
         volume: -2
     color: PaleVioletRed
