--- a/Resources/Prototypes/Entities/Objects/Misc/pen.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/pen.yml
@@ -55,7 +55,7 @@
     state: luxury_pen
   - type: Item
     heldPrefix: luxury_pen
-  - type: InnerToggleableClothing #SS220 для тестов -- не забыть удалить
+  - type: InnerHandToggleProvider #TODO_SS220 для тестов -- не забыть удалить
 
 - type: entity
   id: BaseAdvancedPen
