--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -403,7 +403,11 @@
   - type: SpaceGarbage
   - type: Currency           ##SS220
     price:
+  # ss220 clown uplink bgn
+  - type: Currency
+    price:
       TrashBananaPeel: 1
+  # ss220 clown uplink end
 
 - type: entity
   name: baked banana peel
