--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -452,7 +452,11 @@
         volume: -100
   - type: Currency    ##SS220
     price:
+  # ss220 clown uplink bgn
+  - type: Currency
+    price:
       TrashBananaPeel: 4
+  # ss220 clown uplink end
 
 - type: entity
   name: bananium peel
