--- a/Resources/Prototypes/Loadouts/Miscellaneous/survival.yml
+++ b/Resources/Prototypes/Loadouts/Miscellaneous/survival.yml
@@ -14,7 +14,7 @@
     species:
     - Arachnid
     - Diona
-    #- Dwarf #ss220 add beer can for dwarf survival kit
+    - Dwarf
     - Felinid #ss220 box survival loadout felinid fix
     - Tajaran #SS220 Tajaran-add
     - Human
