Баллоновые приколы. Починены баллоны в аптечках, их теперь можно вкладывать.

--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/medkits.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/medkits.yml
@@ -23,6 +23,7 @@
         - DiscreteHealthAnalyzer
         - SurgeryTool
         - Dropper
+        - GasTank
       components:
         - Hypospray
         - Injector
