--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/stunprod.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/stunprod.yml
@@ -34,8 +34,12 @@
       types:
         Blunt: 0 #ss220 stunprod fix
         Stamina: 35 #ss220 stunprod fix
-  - type: Stunbaton
+  #ss220 change stunprod start
+  #- type: Stunbaton
+    #energyPerUse: 120
+  - type: Stunprod
     energyPerUse: 120
+  #ss220 change stunprod end
   - type: MeleeWeapon
     wideAnimationRotation: -135
     damage:
@@ -60,9 +64,11 @@
         Stamina: 35
   #ss220 stunprod stamina damage fix end
   - type: LandAtCursor # it deals stamina damage when thrown
-  - type: Battery
-    maxCharge: 360
-    startingCharge: 360
+  #ss220 change stunprod start
+  #- type: Battery
+    #maxCharge: 360
+    #startingCharge: 360
+  #ss220 change stunprod end
   - type: UseDelay
   - type: Item
     heldPrefix: off
@@ -86,3 +92,14 @@
   - type: Construction
     graph: makeshiftstunprod
     node: msstunprod
+  #ss220 change stunprod start
+  - type: ContainerContainer
+    containers:
+      cell_slot: !type:ContainerSlot {}
+  - type: PowerCellSlot
+    cellSlotId: cell_slot
+  - type: ItemSlots
+    slots:
+      cell_slot:
+        name: power-cell-slot-component-slot-name-default
+  #ss220 change stunprod end
