--- a/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/makeshiftstunprod.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/makeshiftstunprod.yml
@@ -8,11 +8,11 @@
           steps:
             - material: MetalRod
               amount: 1
-            - tag: PowerCellSmall
-              name: power cell small
-              icon:
-                sprite: Objects/Power/power_cells.rsi
-                state: small
+            #- tag: PowerCellSmall
+              #name: power cell small
+              #icon:
+                #sprite: Objects/Power/power_cells.rsi
+                #state: small
             - tag: Handcuffs
               icon:
                 sprite: Objects/Misc/cablecuffs.rsi
@@ -27,4 +27,4 @@
               doAfter: 15
     - node: msstunprod
       entity: Stunprod
-      
+
