ADD: Detector AI in Uplink

--- a/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
@@ -335,3 +335,17 @@
     Telecrystal: 4
   categories:
   - UplinkDisruption
+
+- type: listing
+  id: UplinkDetectorAi
+  name: uplink-detector-ai
+  description: uplink-detector-ai-desc
+  icon: { sprite: Objects/Tools/multitool.rsi, state: icon }
+  productEntity: MultitoolSyndie
+  discountCategory: usualDiscounts
+  discountDownTo:
+    Telecrystal: 1
+  cost:
+    Telecrystal: 2
+  categories:
+  - UplinkDisruption
