attempts to make invisibility around you

--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -216,6 +216,7 @@
     - DoorBumpOpener
     - ZombifyableByMelee
     - AnomalyHost
+    - CultYoggStealthProvidable
 
 - type: entity
   save: false
