--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -524,7 +524,7 @@
           bounds: "-0.4,-0.3,0.4,0.3"
         density: 5
         mask:
-        - ItemMask
+        - None
   #ss220 add pdaidpainter start
   - type: Tag
     tags:
