--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -216,7 +216,7 @@
     - DoorBumpOpener
     - ZombifyableByMelee
     - AnomalyHost
-    - CultYoggStealthProvidable
+    - CultYoggStealthProvidable #ToDo_SS220 dont forget to delete this
 
 - type: entity
   save: false
