--- a/Resources/Prototypes/SS220/Entities/Clothing/CultYogg/CultYoggSuits.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/CultYogg/CultYoggSuits.yml
@@ -33,6 +33,9 @@
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadHelmetHardsuitCultYogg
   - type: StuckOnEquip
+  - type: Tag
+    tags:
+    - CultYoggStealthProvidable
 
 - type: entity
   parent: ClothingHeadHardsuitWithLightBase
