--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/cultcocoon.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/cultcocoon.yml
@@ -11,6 +11,9 @@
     sprite: SS220/Objects/CultYogg/cocoon.rsi
     layers:
       - state: icon
+  - type: Tag
+    tags:
+    - CultYoggStealthProvidable
 
 - type: entity
   id: CultYoggCocoonSpikegun
