--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/pond.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/pond.yml
@@ -46,3 +46,6 @@
         stackAmount: 7
       - id: SheetTokl1
         stackAmount: 12
+  - type: Tag
+    tags:
+    - CultYoggStealthProvidable
