--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/spikegun.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/spikegun.yml
@@ -49,6 +49,9 @@
           shader: unshaded
     - type: StuckOnEquip
       inHandItem: true
+    - type: Tag
+      tags:
+      - CultYoggStealthProvidable
 
 
 
