--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/strangeFruit.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/strangeFruit.yml
@@ -19,11 +19,13 @@
   - type: Tag
     tags:
     - Omnivorous
+    - CultYoggStealthProvidable
   - type: OnUseTimerTrigger
     delay: 5
   - type: TileSpawnInRangeOnTrigger
     kudzuProtoId: StrangeKudzu
   - type: DeleteOnTrigger
+
 
 - type: entity
   id: StrangeKudzu
