--- a/Resources/Prototypes/SS220/Entities/Objects/Materials/Sheets/tokl.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Materials/Sheets/tokl.yml
@@ -32,6 +32,9 @@
   - type: CultYoggCorrupted
     originalPrototypeId: SheetSteel
     recipe: SheetTokl
+  - type: Tag
+    tags:
+    - CultYoggStealthProvidable
 
 - type: entity
   parent: SheetTokl
