--- a/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cables.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cables.yml
@@ -49,6 +49,9 @@
     cost: 2
     delay: 0
     fx: EffectRCDConstruct0
+  - type: Tag
+    tags:
+    - CultYoggStealthProvidable
 
 - type: entity
   parent: CableBase
