--- a/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cultyoggaltar.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cultyoggaltar.yml
@@ -55,3 +55,6 @@
         base:
           True: { state: blood }
           False: { state: cultaltar }
+  - type: Tag
+    tags:
+    - CultYoggStealthProvidable
