--- a/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cultyoggpod.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cultyoggpod.yml
@@ -71,4 +71,6 @@
     containers:
       cultyYoggPod: !type:ContainerSlot
         showEnts: False
-
+  - type: Tag
+    tags:
+    - CultYoggStealthProvidable
