--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/fungus.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/fungus.yml
@@ -78,6 +78,9 @@
     containers:
       FungusMachine: !type:Container
         showEnts: False
+  - type: Tag
+    tags:
+    - CultYoggStealthProvidable
 
 - type: fungusMachineInventory
   id: CondimenttInventory
