--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/spitballer.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/spitballer.yml
@@ -43,6 +43,9 @@
           shader: unshaded
     - type: StuckOnEquip
       inHandItem: true
+    - type: Tag
+      tags:
+      - CultYoggStealthProvidable
 
 - type: entity
   name: explosive bubbles bullets
