--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/venomancer.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/venomancer.yml
@@ -57,6 +57,9 @@
           shader: unshaded
     - type: StuckOnEquip
       inHandItem: true
+    - type: Tag
+      tags:
+      - CultYoggStealthProvidable
 
 - type: entity
   id: AcidSpit
