+ more tags and update fix

--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/handcuffs.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/handcuffs.yml
@@ -33,6 +33,7 @@
   - type: Tag
     tags:
     - Handcuffs
+    - CultYoggStealthProvidable
   - type: Appearance
   - type: MeleeWeapon
     wideAnimationRotation: 90
