--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/lantern.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/lantern.yml
@@ -21,26 +21,11 @@
     sprite: Objects/Misc/Lights/lights.rsi
     size: Normal
     heldPrefix: off
-  - type: HandheldLight
-    addPrefix: true
-    blinkingBehaviourId: blinking
-    radiatingBehaviourId: radiating
-  - type: LightBehaviour
-    behaviours:
-      - !type:FadeBehaviour
-        id: radiating
-        maxDuration: 2.0
-        startValue: 3.0
-        endValue: 2.0
-        isLooped: true
-        reverseWhenFinished: true
-      - !type:PulseBehaviour
-        id: blinking
-        interpolate: Nearest
-        maxDuration: 1.0
-        minValue: 0.1
-        maxValue: 2.0
-        isLooped: true
+  - type: CultYoggLamp
+  #- type: HandheldLight
+  #  addPrefix: true
+  #  blinkingBehaviourId: blinking
+  #  radiatingBehaviourId: radiating
   - type: PointLight
     enabled: false
     radius: 3
