--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/tools.yml
@@ -152,6 +152,9 @@
   parent: BaseStorageItem
   description: A bag for botanists to easily move their huge harvests.
   components:
+  #ss220 add transfer items in storage start
+  - type: TransferItemsInStorage
+  #ss220 add transfer items in storage end
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/Equipment/plant_bag.rsi
     state: icon
