Wizard getting used to

--- a/Resources/Prototypes/Magic/mindswap_spell.yml
+++ b/Resources/Prototypes/Magic/mindswap_spell.yml
@@ -15,7 +15,9 @@
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/staff_animation.ogg
     icon:
-      sprite: Mobs/Species/Human/organs.rsi
-      state: brain
+    # SS220 Wizard getting used to Begin
+      sprite: SS220/Interface/Actions/magic_spells_other.rsi
+      state: mind
+    # SS220 Wizard getting used to End
     event: !type:MindSwapSpellEvent
       speech: action-speech-spell-mind-swap
