--- a/Resources/Prototypes/Actions/polymorph.yml
+++ b/Resources/Prototypes/Actions/polymorph.yml
@@ -38,8 +38,10 @@
       protoId: WizardRod
     itemIconStyle: NoItem
     icon:
-      sprite: Objects/Fun/immovable_rod.rsi
-      state: icon
+      # SS220 Wizard getting used to Begin
+      sprite: SS220/Interface/Actions/magic_spells_other.rsi
+      state: nullrod
+      # SS220 Wizard getting used to End
 
 - type: entity
   id: ActionPolymorphJaunt
@@ -53,7 +55,7 @@
       protoId: Jaunt
     itemIconStyle: NoItem
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
       state: jaunt
     # TODO: Effect ECS (from cardboard box)
   - type: ActionUpgrade
@@ -73,7 +75,7 @@
       protoId: Jaunt
     itemIconStyle: NoItem
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
       state: jaunt
 
 - type: entity
@@ -88,5 +90,5 @@
       protoId: Jaunt
     itemIconStyle: NoItem
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
       state: jaunt
