--- a/Resources/Prototypes/Magic/event_spells.yml
+++ b/Resources/Prototypes/Magic/event_spells.yml
@@ -7,8 +7,10 @@
     useDelay: 120
     itemIconStyle: BigAction
     icon:
-      sprite: Mobs/Ghosts/ghost_human.rsi
-      state: icon
+    # SS220 Wizard getting used to Begin
+      sprite: SS220/Interface/Actions/magic_spells_other.rsi
+      state: ghost
+    # SS220 Wizard getting used to End
     event: !type:ToggleGhostVisibilityToAllEvent
 
 # TODO: Add Whitelist/Blacklist and Component support to EntitySpawnLists (to avoid making huge hardcoded lists like below).
@@ -23,8 +25,10 @@
     useDelay: 300
     itemIconStyle: BigAction
     icon:
-      sprite: Objects/Weapons/Guns/Rifles/ak.rsi
-      state: base
+    # SS220 Wizard getting used to Begin
+      sprite: SS220/Interface/Actions/magic_spells_other.rsi
+      state: gun
+    # SS220 Wizard getting used to End
     event: !type:RandomGlobalSpawnSpellEvent
       makeSurvivorAntagonist: true
       spawns:
@@ -170,7 +174,7 @@
     useDelay: 300
     itemIconStyle: BigAction
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
       state: magicmissile
     event: !type:RandomGlobalSpawnSpellEvent
       makeSurvivorAntagonist: true
