--- a/Resources/Prototypes/Magic/knock_spell.yml
+++ b/Resources/Prototypes/Magic/knock_spell.yml
@@ -9,7 +9,7 @@
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/knock.ogg
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
       state: knock
     event: !type:KnockSpellEvent
       speech: action-speech-spell-knock
