--- a/Resources/Prototypes/Magic/projectile_spells.yml
+++ b/Resources/Prototypes/Magic/projectile_spells.yml
@@ -13,7 +13,7 @@
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/fireball.ogg
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
       state: fireball
     event: !type:ProjectileSpellEvent
       prototype: ProjectileFireball
@@ -37,7 +37,7 @@
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/fireball.ogg
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
       state: fireball
     event: !type:ProjectileSpellEvent
       prototype: ProjectileFireball
@@ -57,7 +57,7 @@
       sound: !type:SoundPathSpecifier
         path: /Audio/Magic/fireball.ogg
       icon:
-        sprite: Objects/Magic/magicactions.rsi
+        sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
         state: fireball
       event: !type:ProjectileSpellEvent
         prototype: ProjectileFireball
