--- a/Resources/Prototypes/Magic/recall_spell.yml
+++ b/Resources/Prototypes/Magic/recall_spell.yml
@@ -15,7 +15,9 @@
         maxDistance: 5
         variation: 0.2
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      # SS220 Wizard getting used to Begin
+      sprite: SS220/Interface/Actions/magic_spells_other.rsi
       state: item_recall
+      # SS220 Wizard getting used to End
     event: !type:OnItemRecallActionEvent
   - type: ItemRecall
