--- a/Resources/Prototypes/Magic/smoke_spell.yml
+++ b/Resources/Prototypes/Magic/smoke_spell.yml
@@ -7,8 +7,10 @@
     useDelay: 10
     itemIconStyle: BigAction
     icon:
-      sprite: Actions/smokeaction.rsi
-      state: smokeaction
+      # SS220 Wizard getting used to Begin
+      sprite: SS220/Interface/Actions/magic_spells_other.rsi
+      state: smoke
+      # SS220 Wizard getting used to End
     event: !type:InstantSpawnSpellEvent
       prototype: WizardSmoke
       posData: !type:TargetInFront
