--- a/Resources/Prototypes/Magic/touch_spells.yml
+++ b/Resources/Prototypes/Magic/touch_spells.yml
@@ -14,7 +14,7 @@
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/disintegrate.ogg
     icon:
-      sprite: Objects/Magic/magicactions.rsi
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
       state: gib
     event: !type:SmiteSpellEvent
       speech: action-speech-spell-smite
@@ -44,8 +44,8 @@
     sound: !type:SoundPathSpecifier
       path: /Audio/Items/brokenbikehorn.ogg
     icon:
-      sprite: Clothing/Mask/cluwne.rsi
-      state: icon
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
+      state: cluwne # SS220 Wizard getting used to
     event: !type:ChangeComponentsSpellEvent
       speech: action-speech-spell-cluwne
       toAdd:
@@ -69,8 +69,8 @@
     sound: !type:SoundPathSpecifier
       path: /Audio/Effects/slip.ogg
     icon:
-      sprite: Objects/Specific/Janitorial/soap.rsi
-      state: omega-4
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
+      state: slippery # SS220 Wizard getting used to
     event: !type:ChangeComponentsSpellEvent
       speech: action-speech-spell-slip
       toAdd:
