--- a/Resources/Prototypes/Magic/utility_spells.yml
+++ b/Resources/Prototypes/Magic/utility_spells.yml
@@ -7,8 +7,8 @@
     useDelay: 30
     itemIconStyle: BigAction
     icon:
-      sprite: Objects/Weapons/Guns/Basic/wands.rsi
-      state: nothing
+      sprite: SS220/Interface/Actions/magic_spells.rsi # SS220 Wizard getting used to
+      state: charge # SS220 Wizard getting used to
     event: !type:ChargeSpellEvent
       charge: 1
       speech: DI'RI CEL!
