Uranuim Wall Resprite

--- a/Resources/Prototypes/Recipes/Construction/structures.yml
+++ b/Resources/Prototypes/Recipes/Construction/structures.yml
@@ -133,7 +133,7 @@
   category: construction-category-structures
   description: Keeps the air in and the greytide out.
   icon:
-    sprite: Structures/Walls/uranium.rsi
+    sprite: SS220/Structures/Walls/uranium.rsi # SS220 Uranuim Wall Resprite
     state: full
   objectType: Structure
   placementMode: SnapgridCenter
