--- a/Resources/Prototypes/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/walls.yml
@@ -1070,9 +1070,9 @@
   name: uranium wall
   components:
   - type: Sprite
-    sprite: Structures/Walls/uranium.rsi
+    sprite: SS220/Structures/Walls/uranium.rsi # SS220 Uranuim Wall Resprite
   - type: Icon
-    sprite: Structures/Walls/uranium.rsi
+    sprite: SS220/Structures/Walls/uranium.rsi # SS220 Uranuim Wall Resprite
   - type: Construction
     graph: Girder
     node: uraniumWall
