--- a/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -104,35 +104,40 @@
   description: A sturdy helmet designed for complex industrial operations in space.
   components:
   - type: Sprite
-    sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
-    layers:
-    - state: icon
-    - state: icon-unshaded
-      shader: unshaded
-    - state: light-overlay
-      visible: false
-      shader: unshaded
-      map: [ "light" ]
-  - type: HandheldLight
-    addPrefix: false
-  - type: ToggleableLightVisuals
-    clothingVisuals:
-      head:
-      - state: equipped-head-light
-        shader: unshaded
-      head-vox:
-      - state: equipped-head-light-vox
-        shader: unshaded
+    sprite: SS220/Clothing/Head/Hardsuits/spatio.rsi
+    #SS220-Salvage Hardsuit Resprite-End
+    # layers:
+  #   - state: icon
+  #   - state: icon-unshaded
+  #     shader: unshaded
+  #   - state: light-overlay
+  #     visible: false
+  #     shader: unshaded
+  #     map: [ "light" ]
+  # - type: HandheldLight
+  #   addPrefix: false
+  # - type: ToggleableLightVisuals
+  #   clothingVisuals:
+  #     head:
+  #     - state: equipped-head-light
+  #       shader: unshaded
+  #     head-vox:
+  #     - state: equipped-head-light-vox
+  #       shader: unshaded
+    #SS220-Salvage Hardsuit Resprite-End
   - type: Clothing
-    clothingVisuals:
-      head:
-      - state: equipped-head
-      - state: equipped-head-unshaded
-        shader: unshaded
-      head-vox:
-      - state: equipped-head-vox
-      - state: equipped-head-unshaded-vox
-        shader: unshaded
+    sprite: SS220/Clothing/Head/Hardsuits/spatio.rsi #SS220-Salvage Hardsuit Resprite
+    #SS220-Salvage Hardsuit Resprite-Begin
+    # clothingVisuals:
+    #   head:
+    #   - state: equipped-head
+    #   - state: equipped-head-unshaded
+    #     shader: unshaded
+    #   head-vox:
+    #   - state: equipped-head-vox
+    #   - state: equipped-head-unshaded-vox
+    #     shader: unshaded
+    #SS220-Salvage Hardsuit Resprite-End
   - type: PointLight
     color: "#daffad"
     radius: 6
@@ -325,9 +330,9 @@
   description: Special hardsuit helmet, made for the chief engineer of the station.
   components:
   - type: Sprite
-    sprite: Clothing/Head/Hardsuits/syndicate.rsi
+    sprite: Clothing/Head/Hardsuits/engineering-white.rsi
   - type: Clothing
-    sprite: Clothing/Head/Hardsuits/syndicate.rsi
+    sprite: Clothing/Head/Hardsuits/engineering-white.rsi
   - type: PointLight
     color: green
   - type: PressureProtection
@@ -431,36 +436,24 @@
   description: A heavily armored helmet designed for work in special operations. Property of Gorlex Marauders.
   components:
   - type: Sprite
-    sprite: SS220/Clothing/Head/Hardsuits/spatio.rsi #SS220-Salvage Hardsuit Resprite
-  #SS220-Salvage Hardsuit Resprite-Begin
-    # layers:
-    # - state: icon
-    # - state: icon-unshaded
-    #   shader: unshaded
-    # - state: light-overlay
-    #   visible: false
-    #   shader: unshaded
-    #   map: [ "light" ]
-  # - type: HandheldLight
-  #   addPrefix: false
-  # - type: ToggleableLightVisuals
-  #   clothingVisuals:
-  #     head:
-  #     - state: equipped-head-light
-  #       shader: unshaded
-  #SS220-Salvage Hardsuit Resprite-End
+    sprite: Clothing/Head/Hardsuits/syndicate.rsi
   - type: Clothing
-    sprite: SS220/Clothing/Head/Hardsuits/spatio.rsi #SS220-Salvage Hardsuit Resprite
-  #SS220-Salvage Hardsuit Resprite-Begin
-    # clothingVisuals:
-    #   head:
-    #   - state: equipped-head
-    #   - state: equipped-head-unshaded
-    #     shader: unshaded
-  #SS220-Salvage Hardsuit Resprite-End
+    sprite: Clothing/Head/Hardsuits/syndicate.rsi
+  - type: PointLight
+    color: green
   - type: PressureProtection
-    highPressureMultiplier: 0.72
-    lowPressureMultiplier: 10000
+    highPressureMultiplier: 0.08
+    lowPressureMultiplier: 1000
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.8
+        Slash: 0.8
+        Piercing: 0.8
+        Heat: 0.8
+        Radiation: 0.5
+  - type: FireProtection
+    reduction: 0.2
 
 #Blood-red Medic Hardsuit
 - type: entity
