--- a/Resources/Prototypes/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/Voice/speech_emotes.yml
@@ -371,6 +371,20 @@
     - thumps her tail
     - thumps his tail
     - thumps its tail
+    # SS220-localization-begin
+    - стучит хвостом
+    - стучит своим хвостом
+    - стучит её хвостом
+    - стучит его хвостом
+    - бьёт хвостом
+    - бьёт своим хвостом
+    - бьёт её хвостом
+    - бьёт его хвостом
+    - ударяет хвостом
+    - ударяет своим хвостом
+    - ударяет её хвостом
+    - ударяет его хвостом
+    # SS220-localization-end
 
 - type: emote
   id: Salute
